unpackaged/main/default/objects/Contact/fields/Make_Green__c.field-meta.xml
<CustomField>
    <fullName>Make_Green__c</fullName>
    <description>Making the Static environments looks green by going through an entire run in the Pipeline</description>
    <label>Make_Green</label>
    <length>10</length>
    <type>Text</type>
</CustomField>