unpackaged/main/default/objects/Contact/fields/Qualified_for_Onboarding__c.field-meta.xml
<CustomField>
    <fullName>Qualified_for_Onboarding__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Ordering conflict part 2</description>
    <label>Qualified for Onboarding</label>
    <type>Checkbox</type>
</CustomField>